--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 02 16:51:23 CST 2015
-sdk.dir=C\:\\Users\\akilesh\\AppData\\Local\\Android\\sdk
+#Tue Nov 03 20:51:38 CST 2015
+sdk.dir=C\:\\Users\\Pawanp\\AppData\\Local\\Android\\sdk
