--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,10 @@
             android:label="@string/app_name"
             android:launchMode="singleTop" />
         <activity
+            android:name=".activity.RespondMeeting"
+            android:label="@string/app_name"
+            android:launchMode="singleTop" />
+        <activity
             android:name=".activity.MySchedule"
             android:label="@string/app_name"
             android:launchMode="singleTop" />
