Adding Calendar activity changes
This would fetch the data for a user from android calendar and update it
to User free time DB.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,9 @@
             android:label="@string/app_name"
             android:launchMode="singleTop" />
 
+        <activity android:name=".activity.CalendarActivity" >
+        </activity>
+
         <service android:name="com.parse.PushService" />
 
         <receiver android:name="com.parse.ParseBroadcastReceiver" >
