--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,8 +83,10 @@
             android:label="@string/app_name"
             android:launchMode="singleTop" />
 
-        <activity android:name=".activity.CalendarActivity" >
-        </activity>
+        <activity android:name=".activity.CalendarActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop" />
+
 
         <service android:name="com.parse.PushService" />
 
