--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 04 18:47:02 CST 2015
-sdk.dir=C\:\\Users\\akilesh\\AppData\\Local\\Android\\sdk
+#Fri Nov 13 14:43:46 CST 2015
+sdk.dir=C\:\\Users\\Pawanp\\AppData\\Local\\Android\\sdk
